# Vir_ChatBot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.streamlit  README.md  chat.py  compose.yaml  config.py  entrypoint.sh  env.example  gemini.py  langgraph_functions.py  main.py  prompts.py  pyproject.toml  runner.py  schemas.py  streamlit_app.py  tasks.py  tokenizer.py  vectorstore.py  wal.py
agents/vir_chatbot/: tasks.py  vectorstore.py  vir_chatbot.py
backend/: api.py  models.py  state.py
backend/routers/: chat.py  config.py  tasks.py  threads.py  vectorstore.py
frontend/: api_client.py  app.py  pyproject.toml  session.py
frontend/views/: chat.py  config.py  sidebar.py  tasks.py  vectorstore.py
llms/: gemini.py  langgraph_functions.py  tokenizer.py
src/: main.py
streamlit_ui/: api.py  app.py  pyproject.toml
templates/: prompts.py
