[project]
name = "vir-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery==5.5.3",
    "redis==6.4.0",
    "aiofiles==25.1.0",
    "pandas==2.3.3",
    "google==3.0.0",
    "langchain==0.3.27",
    "langchain-community==0.3.28",
    "langchain-core==0.3.81",
    "langchain-google-genai==2.1.9",
    "langchain-google-vertexai==2.0.28",
    "pydantic-settings==2.11.0",
    "faiss-cpu==1.12.0",
    "docling==2.61.1",
    "langgraph-checkpoint-sqlite==3.0.1",
    "langgraph==1.0.1",
    "uvicorn[standard]==0.38.0",
    "fastapi==0.123.0",
    "python-multipart==0.0.20",
    "python-toon==0.1.3",
    "aiosqlite>=0.20.0,<0.22.0",
    "msgpack==1.0.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
name = "pytorch-cpu"
explicit = true

[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[tool.isort]
profile = "black"
